# ml-medical-cost-v1

./: .gitattributes  .gitignore  .gitlab-ci.yml  README.md
project/: .env-example  .gitlab-ci.yaml  .gitlab-ci.yml  Dockerfile.client  Dockerfile.server  docker-compose.yaml  pyproject.toml  requirements-client.txt  requirements-server.txt
project/data/raw/: insurance.parquet
project/models/: medical_regressor.pkl
project/notebooks/: medical-cost-analysis.ipynb
project/src/: main.py  mlflow_setup.py  run.py
project/src/config/: params.yaml
project/src/data/: fetch_data.py  load_data.py  split_data.py
project/src/models/: mlflow_logging.py  model_pipeline.py  optuna_tuning.py
project/src/project/client/: app.py  entrypoint.sh
project/src/project/server/: bentofile.yaml  build_model.py  export_model.py  service.py
project/src/utils/: logger.py  service_port.py
